# passgen

./: Cargo.toml  README.md  test.txt
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs
tests/: cli.rs
