[package]
name = "passgen"
version = "0.4.0"
authors = ["Antidote1911 <antidote1911@gmail.com>"]
license = "MIT"
description = "🔑 Random password generator"
keywords = ["cli", "password"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Antidote1911/passgen"
repository = "https://github.com/Antidote1911/passgen"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
serde = { version = "1.0.188", features = ["derive"] }
confy = "0.5.1"
color-eyre = "0.6.2"
question = "0.2.2"
# libpassgen = "1.0.3"
libpassgen = { git = "https://github.com/Antidote1911/libpassgen", branch = "master" }
# libpassgen = { path = "../libpassgen" }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
